# mrs_inspector

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: Inspect.action
launch/: mrs_inspector.launch
msg/: InspectionPoint.msg  Start.msg
resources/: obstacles.asc
src/: client.py  node.py
src/free_space/: free_space.py
src/rrt/: rrt.py  tree.py
src/trajectories/: __init__.py  resolve_collisions.py  sample_trajectory.py
src/tsp/: __init__.py  assign_viewpoints.py  lkh.py  solve_single_tsp.py  solve_tsp.py
src/utils/: .gitattributes  __init__.py  free_space.py  ip2vp.py
src/visualization/: __init__.py  functions.py  visualize_goal.py  visualize_trajectories.py  visualize_tsp.py
tmux_scripts/: rviz.rviz  session.yml
tmux_scripts/configs/: rviz.rviz
